load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//src:__subpackages__"])

cc_library(
    name = "cc_library",
    srcs = glob(
        [
            "*.h",
            "*.cc",
            "*.cpp",
        ],
        exclude = [
            "**/*_test.cc",
            "**/*_benchmark.cc",
        ],
    ),
    copts = ["-Ibazel-out/k8-fastbuild/bin/third_party/perf_build/include", "-Ibazel-out/k8-fastbuild/bin/third_party/bcc_build/include/bcc", "-Wno-unused-parameter","-Wno-unused-variable","-Wno-mismatched-tags"],
    hdrs = glob(["*.h"]),
    deps = [
        "//src/probe/profile/perf:cc_library",
        "//src/probe/profile/bcc:cc_library",
    ],
)
